# haorender

./: .gitignore  CMakeLists.txt  Drawer.cpp  NOTICE  README.ja.md  README.md  README.zh-CN.md  main.cpp  model.cpp  programmable_shader.cpp  qt_main.cpp  raytrace_backend.cpp  render.cpp  shader.cpp
Resources/MAIFU/: IF.fbx  readme.txt
Resources/风影/: 使用规约.txt  风影.pmx
Resources/风影/textures/: Avatar_Female_Wraith_Tex_Cloth_Diffuse.tga  Avatar_Female_Wraith_Tex_Face_Diffuse.tga
include/: drawer.h  model.h  programmable_shader.h  raytrace_backend.h  render.h  resource.h  shader.h
scripts/: package_windows_portable.ps1
